--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="" placeholder="Имя" required />
+                        <input class="form__input" type="text" name="name" pattern="(^[А-Я]{1}[а-я]{1,}$)|(^[А-Я]{1}[а-я]{1,}([-]{0,1})?([а-я]{1,})?$)" placeholder="Имя" required />
                     </div>
                     <div class="form__field">
                         <input class="form__input" type="email" name="email" pattern="" placeholder="E-Mail" required />
