Паттерн на мыле 3

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <input class="form__input" type="text" name="name" pattern="(^[А-Я]{1})([А-ЯЁа-яё-]{0,})" minlength="2" maxlength="20" placeholder="Имя" required />
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="email" pattern="[\w+\.+@]+" placeholder="E-Mail" required />
+                        <input class="form__input" type="email" name="email" pattern="[\w+\.+@-]+" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
