Вопрос по кириллице после @

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     </div>
                     <div class="form__field">
                         <input class="form__input" type="email" name="email" pattern="[\w+\.+@-]+" placeholder="E-Mail" required />
+                        <!-- почему в regex101.com кириллица не проходит а в браузере проходит после @??? -->
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
