--- a/index.html
+++ b/index.html
@@ -20,20 +20,19 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="(^[А-Я]{1})([А-ЯЁа-яё-]{0,})" minlength="2" maxlength="20" placeholder="Имя" required />
+                        <input class="form__input" type="text" name="name" pattern="((^[А-Я]{1})([а-яё]{0,}))|((^[А-Я]{1})([а-яё]{0,}))?(-)[А-Я]{1}[а-яё]{0,}" minlength="2" maxlength="20" placeholder="Имя" required />
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="email" pattern="[\w+\.+@-]+" placeholder="E-Mail" required />
-                        <!-- почему в regex101.com кириллица не проходит а в браузере проходит после @??? -->
+                        <input class="form__input" type="email" name="email" pattern="(^[a-z(.\)?]*)(@)([a-z]*)(\.)([a-z(.\)?]*)" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="(^(\+7)+|(8)+)((\(|\s)?)(\w{3})((\)|\-|\s)*)?([0-9-]*)" minlength="11" maxlength="18"  required/>
+                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="(^(\+7{1})|^(8{1}))((\s|\(|-)?)\d{3}((\s|\)|-)?)((\s|-)?)\d{3}((\s|-)?)\d{2}((\s|-)?)\d{2}$" minlength="11" maxlength="18"  required/>
                         <!--была ошибка в minlength стояло 18 не пропускало номера с меньшим кол=влм тире или пробелов-->
                         <span class="form__error">телефон в формате: +7 (900) 000-00-00</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="url" pattern="(^(http(s)?:\/\/))((www\.)?)([\d\w\.]+)((:\d{1,5})?)([\d\/\w]*)(#$)?" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="url" name="url" pattern="^(http(s)?:\/\/)(((www\.)?)(([^www.][0-9a-z\.]+)([a-z]{2,6}))|(\d{3}\.\d{3}\.\d{3}\.\d{3}))((:\d{1,5})?)((\/){1}([a-z0-9])+)*(\/)?(#$)?" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
